@@ -1,20 +1,14 @@
 #textdomain wesnoth
 
 [ai]
-    id=testing_ai_recruitment
-    description="Experimental Recruitment AI"
-    version=10800
+    id=ai_default_rca
+    description=_"Multiplayer_AI^Default AI (RCA)" # RCA := Register Candidate Action; more info at http://forums.wesnoth.org/viewtopic.php?p=419625#p419625
+    version=10710
     [stage]
         id=main_loop
         name=ai_default_rca::candidate_action_evaluation_loop
         {AI_CA_GOTO}
-        [candidate_action]
-            id=alternate_recruitment
-            engine=cpp
-            name=ai_default_rca::testing_recruitment_phase
-            max_score={AI_CA_RECRUITMENT_SCORE}
-            score={AI_CA_RECRUITMENT_SCORE}
-        [/candidate_action]
+        {AI_CA_RECRUITMENT}
         {AI_CA_MOVE_LEADER_TO_GOALS}
         {AI_CA_MOVE_LEADER_TO_KEEP}
         {AI_CA_COMBAT}
@@ -22,5 +16,6 @@
         {AI_CA_VILLAGES}
         {AI_CA_RETREAT}
         {AI_CA_MOVE_TO_TARGETS}
+        {AI_CA_PASSIVE_LEADER_SHARES_KEEP}
     [/stage]
 [/ai]
