@@ -1,2 +1,2 @@
 #textdomain wesnoth
-{ai/ais/testing_ai_default.cfg}
+{ai/ais/ai_default_rca.cfg}
