@@ -7,7 +7,7 @@
     version=10800
     [stage]
         id=main_loop
-        name=testing_ai_default::candidate_action_evaluation_loop
+        name=ai_default_rca::candidate_action_evaluation_loop
         {AI_CA_GOTO}
         [candidate_action]
             id=alternate_recruitment
