@@ -7,7 +7,7 @@
     {AI_SIMPLE_FORMULA_AI_EXPERIMENTAL_RECRUITMENT}
     [stage]
         id=main_loop
-        name=testing_ai_default::candidate_action_evaluation_loop
+        name=ai_default_rca::candidate_action_evaluation_loop
         {AI_CA_GOTO}
         {AI_CA_RECRUITMENT}
         {AI_CA_MOVE_LEADER_TO_GOALS}
