@@ -6,7 +6,7 @@
     version=10703
     [stage]
         engine=cpp
-        name=testing_ai_default::candidate_action_evaluation_loop #this is candidate action evaluation loop stage
+        name=ai_default_rca::candidate_action_evaluation_loop #this is candidate action evaluation loop stage
         [candidate_action] #it consists of several candidate actions
             engine=fai # fai engine is temporary disabled, it will be enabled real soon. Note that the rest of parameters are parsed by formula ai engine
             name=poisoner #this paramerer (and the rest of them), are specific to fai engine
