@@ -66,7 +66,7 @@
     [/modify_side]
     {MODIFY_AI_ADD_ASPECT 2 attacks (
         [facet]
-            name=testing_ai_default::aspect_attacks
+            name=ai_default_rca::aspect_attacks
             invalidate_on_gamestate_change=yes
             [filter_own]
                 race=dwarf
