@@ -268,7 +268,7 @@ function my_ai:stage_hello()
 	--debug_utils.dbms(ai,false,"variable",false)
 	local s = wesnoth.debug_ai(2)
 	--wesnoth.message("Hi", s)
-	--wesnoth.message(tostring(s["components"]["stage"]["testing_ai_default::candidate_action_evaluation_loop"]["candidate_action"]["second"]:exec(true)))
+	--wesnoth.message(tostring(s["components"]["stage"]["ai_default_rca::candidate_action_evaluation_loop"]["candidate_action"]["second"]:exec(true)))
 	--debug_utils.dbms(s,false,"variable",false)
 	wesnoth.message("LuaAI agg", tostring(s.get_ai().get_aggression()))
 end
@@ -334,7 +334,7 @@ return my_ai
 >>
             [/engine]
             [stage]
-                name=testing_ai_default::candidate_action_evaluation_loop
+                name=ai_default_rca::candidate_action_evaluation_loop
                 id=ca_loop
                 [candidate_action]
                     engine=lua
