@@ -246,7 +246,7 @@ Gs^Fp       , Gs^Fp       , Wwf         , Wwf         , Mm          , Rd        
                 code = << return 0.23 >>
             [/aspect]
             [stage]
-                name=testing_ai_default::candidate_action_evaluation_loop
+                name=ai_default_rca::candidate_action_evaluation_loop
                 id=ca_loop
 		[candidate_action]
 			engine=lua
