@@ -49,7 +49,7 @@
     invalidate_on_gamestate_change=yes
     [default]
         engine=cpp
-        name=testing_ai_default::aspect_attacks
+        name=ai_default_rca::aspect_attacks
         invalidate_on_gamestate_change=yes
     [/default]
 [/aspect]
