@@ -319,7 +319,7 @@
         path=stage[0]
         [stage]
             id=retreat_to_olurfs_land
-            name=testing_ai_default::candidate_action_evaluation_loop
+            name=ai_default_rca::candidate_action_evaluation_loop
             #TODO: add [candidate_action]s to make the retreat work
         [/stage]
     [/modify_ai]
