@@ -200,7 +200,7 @@
                     code="(...):retreat()"
                 [/stage]
                 [stage]
-                    name=testing_ai_default::candidate_action_evaluation_loop
+                    name=ai_default_rca::candidate_action_evaluation_loop
                     id=simple_main_loop
                     {AI_CA_COMBAT}
                     {AI_CA_SIMPLE_MOVE_TO_TARGETS}
