@@ -1084,8 +1084,8 @@
         name = "Mark McGuire (TronPaul)"
     [/entry]
     [entry]
-        name="Matthias Schoeck (mattsc)"
-        comment="AI improvements"
+        name = "Matthias Schoeck (mattsc)"
+        comment = "AI improvements"
     [/entry]
     [entry]
         name = "Maximilian Lupke (malumalu)"
