@@ -48,7 +48,7 @@
     [candidate_action]
         id=goto
         engine=cpp
-        name=testing_ai_default::goto_phase
+        name=ai_default_rca::goto_phase
         max_score={AI_CA_GOTO_SCORE}
         score={AI_CA_GOTO_SCORE}
     [/candidate_action]
@@ -58,7 +58,7 @@
     [candidate_action]
         id=recruitment
         engine=cpp
-        name=testing_ai_default::aspect_recruitment_phase
+        name=ai_default_rca::aspect_recruitment_phase
         max_score={AI_CA_RECRUITMENT_SCORE}
         score={AI_CA_RECRUITMENT_SCORE}
     [/candidate_action]
@@ -68,7 +68,7 @@
     [candidate_action]
         id=move_leader_to_goals
         engine=cpp
-        name=testing_ai_default::move_leader_to_goals_phase
+        name=ai_default_rca::move_leader_to_goals_phase
         max_score={AI_CA_MOVE_LEADER_TO_GOALS_SCORE}
         score={AI_CA_MOVE_LEADER_TO_GOALS_SCORE}
     [/candidate_action]
@@ -78,7 +78,7 @@
     [candidate_action]
         id=move_leader_to_keep
         engine=cpp
-        name=testing_ai_default::move_leader_to_keep_phase
+        name=ai_default_rca::move_leader_to_keep_phase
         max_score={AI_CA_MOVE_LEADER_TO_KEEP_SCORE}
         score={AI_CA_MOVE_LEADER_TO_KEEP_SCORE}
     [/candidate_action]
@@ -88,7 +88,7 @@
     [candidate_action]
         id=combat
         engine=cpp
-        name=testing_ai_default::combat_phase
+        name=ai_default_rca::combat_phase
         max_score={AI_CA_COMBAT_SCORE}
         score={AI_CA_COMBAT_SCORE}
     [/candidate_action]
@@ -98,7 +98,7 @@
     [candidate_action]
         id=healing
         engine=cpp
-        name=testing_ai_default::get_healing_phase
+        name=ai_default_rca::get_healing_phase
         max_score={AI_CA_HEALING_SCORE}
         score={AI_CA_HEALING_SCORE}
     [/candidate_action]
@@ -108,7 +108,7 @@
     [candidate_action]
         id=villages
         engine=cpp
-        name=testing_ai_default::get_villages_phase
+        name=ai_default_rca::get_villages_phase
         max_score={AI_CA_VILLAGES_SCORE}
         score={AI_CA_VILLAGES_SCORE}
     [/candidate_action]
@@ -118,7 +118,7 @@
     [candidate_action]
         id=retreat
         engine=cpp
-        name=testing_ai_default::retreat_phase
+        name=ai_default_rca::retreat_phase
         max_score={AI_CA_RETREAT_SCORE}
         score={AI_CA_RETREAT_SCORE}
     [/candidate_action]
@@ -128,7 +128,7 @@
     [candidate_action]
         id=move_to_targets
         engine=cpp
-        name=testing_ai_default::testing_move_to_targets_phase
+        name=ai_default_rca::move_to_targets_phase
         max_score={AI_CA_MOVE_TO_TARGETS_SCORE}
         score={AI_CA_MOVE_TO_TARGETS_SCORE}
     [/candidate_action]
@@ -138,7 +138,7 @@
     [candidate_action]
         id=passive_leader_shares_keep
         engine=cpp
-        name=testing_ai_default::passive_leader_shares_keep_phase
+        name=ai_default_rca::passive_leader_shares_keep_phase
         max_score={AI_CA_PASSIVE_LEADER_SHARES_KEEP_SCORE}
         score={AI_CA_PASSIVE_LEADER_SHARES_KEEP_SCORE}
     [/candidate_action]
@@ -150,7 +150,7 @@
     [candidate_action]
         id=simple_move_to_targets
         engine=cpp
-        name=testing_ai_default::simple_move_and_targeting_phase
+        name=ai_default_rca::simple_move_and_targeting_phase
         max_score={AI_CA_MOVE_TO_TARGETS_SCORE}
         score={AI_CA_MOVE_TO_TARGETS_SCORE}
     [/candidate_action]
