@@ -91,6 +91,7 @@ Version 1.11.0+svn:
    * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
    * Ambush now works for desert palms and dead great trees (bug #20207)
    * Hex field size and default terrain are wml configurable
+   * RCA AI renamed from 'testing' to 'default'
    * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
    * Fixed a bug disallowing the left shift and meta key to be detected in
      the hotkeys
